[gd_scene load_steps=23 format=3 uid="uid://bvlh16yfcevdj"]

[ext_resource type="Script" path="res://Scene/DisasterSys/disasterPanel.gd" id="1_njxrl"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="3_srxaq"]
[ext_resource type="Texture2D" uid="uid://c55poolb2pxld" path="res://Asset/城镇建筑/会议室新.png" id="5_42wl1"]
[ext_resource type="PackedScene" uid="uid://cxr21r3qi1u3q" path="res://Scene/DisasterSys/disasterItem.tscn" id="5_qwu0r"]
[ext_resource type="Texture2D" uid="uid://cej3eajnovwwy" path="res://Asset/城镇建筑/集市2.png" id="6_slyy2"]
[ext_resource type="Texture2D" uid="uid://cq7h3g8gs7vpw" path="res://Asset/hourse/1.png" id="7_hjoyj"]
[ext_resource type="Texture2D" uid="uid://b3e4y6w102ylq" path="res://Asset/城镇建筑/演武场2.png" id="7_nfro8"]
[ext_resource type="Texture2D" uid="uid://nupp17vxn0nh" path="res://Asset/hourse/2.png" id="8_6kmu4"]
[ext_resource type="Texture2D" uid="uid://davkbd86n4t1w" path="res://Asset/hourse/4.png" id="9_ljnbp"]
[ext_resource type="Texture2D" uid="uid://cahvksg3fhy0c" path="res://Asset/hourse/5.png" id="10_fxcq2"]
[ext_resource type="Texture2D" uid="uid://cke5hd02xhkwh" path="res://Asset/hourse/6.png" id="11_568vk"]
[ext_resource type="Texture2D" uid="uid://calsispsgnqo4" path="res://Asset/hourse/7.png" id="12_gg73b"]
[ext_resource type="Texture2D" uid="uid://xs0sj7wpixsi" path="res://Asset/hourse/8.png" id="13_dudkv"]
[ext_resource type="Texture2D" uid="uid://b5h2s5sdllvxe" path="res://Asset/hourse/9.png" id="14_nhb52"]
[ext_resource type="Texture2D" uid="uid://cak3ibfuy7oto" path="res://Asset/hourse/10.png" id="15_k3vuq"]
[ext_resource type="Texture2D" uid="uid://c8l1o2pkki1r4" path="res://Asset/hourse/运动的马尔,.png" id="16_f6fpy"]

[sub_resource type="Animation" id="Animation_2p14g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_hjoyj")]
}

[sub_resource type="Animation" id="Animation_cxxfk"]
resource_name = "carriage"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_hjoyj"), ExtResource("8_6kmu4"), ExtResource("9_ljnbp"), ExtResource("10_fxcq2"), ExtResource("10_fxcq2"), ExtResource("10_fxcq2"), ExtResource("11_568vk"), ExtResource("12_gg73b"), ExtResource("13_dudkv"), ExtResource("14_nhb52"), ExtResource("15_k3vuq")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1udku"]
_data = {
"RESET": SubResource("Animation_2p14g"),
"carriage": SubResource("Animation_cxxfk")
}

[sub_resource type="Animation" id="Animation_fx8yh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-312, 529)]
}

[sub_resource type="Animation" id="Animation_rqupt"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-312, 529), Vector2(2247, 529)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xg6ln"]
_data = {
"RESET": SubResource("Animation_fx8yh"),
"new_animation": SubResource("Animation_rqupt")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njxrl")
happys = Array[int]([3, 8, 10])
accepts = Array[int]([4, 6, 8])
doubts = Array[int]([1, 3, 6])
sads = Array[int]([1, 3, 6])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1381.0
offset_top = -882.0
offset_right = 1611.0
offset_bottom = 730.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -669.0
offset_top = -411.0
offset_right = 669.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("3_srxaq")

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 356.0
offset_top = 189.0
offset_right = 1019.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 31
text = "请选择你赈灾的比例 5、8、12、"
autowrap_mode = 2

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 666.0
offset_right = 1593.0
offset_bottom = 917.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 642.0
offset_top = 831.0
offset_right = 1305.0
offset_bottom = 938.0

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="allocationBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "分配"

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Button2" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "撤销"

[node name="Control_1" parent="." instance=ExtResource("5_qwu0r")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 368.0
offset_top = 61.0
offset_right = -1158.0
offset_bottom = -415.0
grow_horizontal = 2
grow_vertical = 2
factionIndex = 1
headImg = ExtResource("5_42wl1")
detail_str = "优先满足士族需求，通过公开透明的分配确保公平，提升士族支持度，但需注意士族作为大地主阶层，可能加剧对普通百姓的剥削。"
namelv = "士赈模式"

[node name="Control_2" parent="." instance=ExtResource("5_qwu0r")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 754.0
offset_top = 61.0
offset_right = -769.0
offset_bottom = -418.0
grow_horizontal = 2
grow_vertical = 2
factionIndex = 2
headImg = ExtResource("6_slyy2")
detail_str = "优先保障商人集团利益，确保粮食流通和市场稳定，通过控制商路维持价格，但需警惕商人可能哄抬物价，影响百姓民心。"
namelv = "商赈模式"

[node name="Control_3" parent="." instance=ExtResource("5_qwu0r")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1159.0
offset_top = 61.0
offset_right = -369.0
offset_bottom = -416.0
grow_horizontal = 2
grow_vertical = 2
headImg = ExtResource("7_nfro8")
detail_str = "优先保障军队需求，确保粮食储备充足、士兵士气高昂，但要警惕军官用于犒劳士卒导致的贪污行为。"
namelv = "军赈模式"

[node name="str_standard" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 710.0
offset_right = 964.0
offset_bottom = 882.0
theme_override_colors/font_color = Color(0.621959, 1, 0.672549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 31
text = "欣然：2（满足大幅度提升支持度）
认可：2（满足小幅度提升支持度）
疑虑：22（满足不降低支持度）
(不满足疑虑会降低好感度)"
autowrap_mode = 2

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 674.0
offset_right = 1405.0
offset_bottom = 706.0
theme_override_colors/font_color = Color(4.62055e-06, 0.928658, 0.962291, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 31
text = "分配不同的粮食数量，让已有粮食数量达到他们的预期"
autowrap_mode = 2

[node name="str_reside" type="Label" parent="."]
layout_mode = 0
offset_left = 797.0
offset_top = 815.0
offset_right = 1174.0
offset_bottom = 854.0
theme_override_colors/font_color = Color(1, 0.749586, 0.556891, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 31
text = "剩余粮食数：25（万吨）"
vertical_alignment = 2
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 657.0
offset_top = 259.0
offset_right = 1169.0
offset_bottom = 771.0
texture = ExtResource("7_hjoyj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_1udku")
}
autoplay = "carriage"

[node name="运动的马尔," type="Sprite2D" parent="."]
position = Vector2(-312, 529)
texture = ExtResource("16_f6fpy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="运动的马尔,"]
libraries = {
"": SubResource("AnimationLibrary_xg6ln")
}
autoplay = "new_animation"

[connection signal="button_down" from="HBoxContainer/allocationBtn" to="." method="_on_allocation_down"]
[connection signal="button_down" from="HBoxContainer/Button2" to="." method="_on_button_button_down"]
